4 June 2008: Wouter
	- updated libtool files with newer version.
	- iana portlist updated.

3 June 2008: Wouter
	- fixup local-zone: "30.172.in-addr.arpa." nodefault, so that the
	  trailing dot is not used during comparison.

2 June 2008: Wouter
	- Jelte fixed bugs in my absence
	  - bug 178: fixed unportable shell usage in configure (relied on 
	    bash shell).
	  - bug 180: fixed buffer overflow in unbound-checkconf use of strncat.
	  - bug 181: fixed buffer overflow in ldns (called by unbound to parse
	    config file parts).
	- fixes by Wouter
	  - bug 177: fixed compilation failure on opensuse, the 
	    --disable-static configure flag caused problems.  (Patch from 
	    Klaus Singvogel)
	  - bug 179: same fix as 177.
	  - bug 185: --disable-shared not passed along to ldns included with 
	    unbound. Fixed so that configure parameters are passed to the
	    subdir configure script.
	    fixed that ./libtool is used always, you can still override
	    manually with ./configure libtool=mylibtool or set $libtool in
	    the environment.
	- update of the ldns tarball to current ldns svn version (fix 181).
	- bug 184: -r option for unbound-host, read resolv.conf for 
	  forwarder. (Note that forwarder must support DNSSEC for validation
	  to succeed).

23 May 2008: Wouter
	- mingw32 porting.
	  - test for sys/wait.h
	  - WSAEWOULDBLOCK test after nonblocking TCP connect.
	  - write_iov_buffer removed: unused and no struct iov on windows.
	  - signed/unsigned warning fixup mini_event.
	  - use ioctlsocket to set nonblocking I/O if fnctl is unavailable.
	  - skip signals that are not defined
	  - detect pwd.h.
	  - detect getpwnam, getrlimit, setsid, sbrk, chroot.
	  - default config has no chroot if chroot() unavailable.
	  - if no kill() then no pidfile is read or written.
	  - gmtime_r is replaced by nonthreadsafe alternative if unavail.
	    used in rrsig time validation errors.

22 May 2008: Wouter
	- contrib unbound.spec from Patrick Vande Walle.