@@ -1,3 +1,7 @@
+8 June 2008: Wouter
+	- if multiple CNAMEs, use the first one. Fixup akamai CNAME bug.
+	  Reported by Robert Edmonds.
+
 4 June 2008: Wouter
 	- updated libtool files with newer version.
 	- iana portlist updated.
